[package]
name = "binance-fastwebsocket-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
http-body-util = "0.1.2"
hyper = "1.4.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
webpki-roots = "0.26.6"
